# flet-routing-tutorial

./: .gitignore  main.py  pyproject.toml  requirements.txt
docs/about/: CHANGELOG.md
incolume/py/flet_routing_tutorial/: State.py  __init__.py  main.py
incolume/py/flet_routing_tutorial/user_controls/: app_bar.py
incolume/py/flet_routing_tutorial/views/: Router.py  data_view.py  index_view.py  profile_view.py  routes.py  settings_view.py
tests/: conftest.py  test_semver.py
