[tool.poetry]
name = "incolume-py-flet-routing-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "APL2"
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "0.10.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
